--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;1,500;1,600&family=Nunito+Sans:ital,wght@0,400;0,600;1,400&display=swap');
 
-html, body { height: 100%; }
+html, body { height: 100%; scroll-behavior: smooth; }
 
 body {
     font-family: 'Nunito Sans', sans-serif;
