--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -85,8 +85,22 @@ input[type="number"]::-webkit-outer-spin-button {
 
 @keyframes fadeDown {
     from {
+        opacity: 0.9;
+        transform: translateY(-2px);
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+.fadeUp {
+    animation: fadeUp 0.8s ease-in-out;
+}
+
+@keyframes fadeUp {
+    from {
         opacity: 0;
-        transform: translateY(-80px);
+        transform: translateY(80px);
     }
 
     to {
