--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -107,3 +107,61 @@ input[type="number"]::-webkit-outer-spin-button {
         opacity: 1;
     }
 }
+.fadeInRight {
+    animation: fadeInRight 2s ease-in-out;
+}
+
+@keyframes fadeInRight {
+    from {
+        opacity: 0;
+        transform: translateX(300px);
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+.fadeInLeft {
+    animation: fadeInLeft 2s ease-in-out;
+}
+
+@keyframes fadeInLeft {
+    from {
+        opacity: 0;
+        transform: translateX(-300px);
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+.bounce {
+    animation: bounce .4s ease infinite alternate;
+    ;
+}
+
+@keyframes bounce {
+    0% {
+
+    }
+
+    100% {
+        transform: translateY(-5px);
+    }
+}
+.fadeDown2 {
+    animation: fadeDown 0.8s ease-in-out;
+}
+
+@keyframes fadeDown2 {
+    from {
+        opacity: 0;
+        transform: translateY(-80px);
+    }
+
+    to {
+        opacity: 1;
+    }
+}
