--- a/src/assets/css/carousel.css
+++ b/src/assets/css/carousel.css
@@ -18,8 +18,8 @@
   transform: translate(50%, -50%);
 }
 .carousel__slide {
-  width:fit-content;
-  align-items: flex-start;
+  /* width:fit-content; */
+  /* align-items: flex-start; */
 }
 .carousel__icon{
   position: absolute;
