--- a/src/assets/css/carousel.css
+++ b/src/assets/css/carousel.css
@@ -7,13 +7,20 @@
 .carousel__prev {
   top: 50%;
   left: 0;
-  margin-left: 25px;
+  margin-left: -5px;
   transform: translate(-50%, -50%);
 }
 
 .carousel__next {
   top: 50%;
   right: 0;
-  margin-right: 25px;
+  margin-right: -5px;
   transform: translate(50%, -50%);
+}
+.carousel__slide {
+  /* width:fit-content; */
+  /* align-items: flex-start; */
+}
+.carousel__icon{
+  position: absolute;
 }
